# symbion

./: .gitignore  README.md
client/: .env.example  .gitignore  components.json  next.config.mjs  package-lock.json  package.json  tsconfig.json
client/public/.well-known/: did.json
client/public/meta/: blogs.meta.txt  deconnect_articles.meta.txt  deconnect_pages.meta.txt  deconnect_users.meta.txt
client/src/: middleware.ts
client/src/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
client/src/app/(root)/: page.tsx
client/src/app/(root)/(protected)/dashboard/: layout.tsx
client/src/app/(root)/(unprotected)/: layout.tsx  page.tsx
client/src/app/(root)/(unprotected)/(auth)/: loading.tsx
client/src/app/(root)/[...auth]/: page.tsx
client/src/app/(root)/a/[id]/: d.ts
client/src/app/[...auth]/: page.tsx
client/src/app/api/auth/did/: route.ts
client/src/app/api/files/: route.ts
client/src/app/api/files/[cid]/: route.ts
client/src/app/dashboard/: layout.tsx  page.tsx
client/src/app/dashboard/(root)/: page.tsx
client/src/app/dashboard/blogs/: page.tsx
client/src/app/dashboard/data/: page.tsx
client/src/app/dashboard/domains/: page.tsx
client/src/app/dashboard/newsletters/: page.tsx
client/src/app/dashboard/pages/table/: faceted-filter.tsx  index.tsx  inviter-card.tsx
client/src/app/dashboard/settings/: page.tsx
client/src/assets/: static.ts
client/src/components/actions/: create-blog.tsx  disconnect-logout.tsx  transfer-blog.tsx
client/src/components/articles/cards/: mini.tsx
client/src/components/articles/editor/: content.tsx  index.tsx  settings.tsx
client/src/components/blogs/: card.tsx  dashboard-sidebar.tsx  menu.tsx
client/src/components/common/: article-sidebar.tsx  bento-grid.tsx  dashboard-header.tsx  dashboard-sidebar.tsx  data-ownership-key.tsx  footer.tsx  icons.tsx  info-card.tsx  list-selector.tsx  locale-switcher.tsx  option-selector.tsx  page-header.tsx  page-sidebar.tsx  uploader.tsx  user-menu.tsx  utilities.tsx  warppers.tsx
client/src/components/common/loaders/: wallet.tsx
client/src/components/dashboard/blog/: key-card.tsx  key-menu.tsx
client/src/components/dashboard/common/: header.tsx  sidebar.tsx
client/src/components/did/: create.tsx  verify.tsx
client/src/components/editor/: index.tsx
client/src/components/editor/hooks/: index.ts
client/src/components/editor/lib/constants/: index.tsx
client/src/components/editor/lib/helpers/: index.ts
client/src/components/editor/nodes/: index.ts
client/src/components/editor/plugins/: index.ts  withBlockquote.ts  withChecklist.ts  withCodeBlock.ts  withImage.ts  withInLines.tsx  withMarks.ts
client/src/components/editor/styles/: index.css
client/src/components/editor/toolbars/: buttons.tsx  fixed.tsx  floating.tsx
client/src/components/editor/types/: index.ts
client/src/components/header/: index.tsx
client/src/components/native/: image.tsx  input.tsx  textarea.tsx
client/src/components/pages/cards/: mini.tsx
client/src/components/pages/editor/: basic.tsx  body.tsx  index.tsx  monetization.tsx  social.tsx
client/src/components/sections/: main-hub.tsx
client/src/components/sidebar/: left-sidebar.tsx  right-sidebar.tsx
client/src/components/storage/mega/: header-menu.tsx  index.tsx  layout.tsx  sidebar.tsx
client/src/components/storage/mega/content/: device.tsx  index.tsx  recent-uploads.tsx  url.tsx
client/src/components/storage/mini/: index.tsx
client/src/components/ui/: accordion.tsx  badge.tsx  bento-grid.tsx  button.tsx  carousel.tsx  checkbox.tsx  command.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  input.tsx  menubar.tsx  popover.tsx  select.tsx  separator.tsx  sheet.tsx  table.tsx  tabs.tsx  textarea.tsx
client/src/components/wallet/: index.tsx  modal.tsx  popover-profile.tsx  profile.tsx
client/src/context/: storage.tsx
client/src/hooks/: useGetClientUser.ts  usePopup.ts  useWalletManagement.ts
client/src/hooks/gear/articles/: useMetadata.ts  useSendMessage.ts
client/src/hooks/gear/balance/: index.ts
client/src/hooks/gear/blogs/: useMetadata.ts  useSendMessage.ts
client/src/hooks/gear/pages/: useMetadata.ts  useSendMessage.ts
client/src/lib/_actions/: did.ts  gear.ts  helpers.ts  locale.ts
client/src/lib/auth/: options.ts
client/src/lib/configs/: env.ts  web3-storage.ts
client/src/lib/providers/: gear.tsx  next-auth.tsx
client/src/lib/services/: locales.ts
client/src/lib/utils/constants/: index.ts  index.tsx
client/src/lib/utils/helpers/: index.ts
client/src/styles/: globals.css
client/src/types/: index.ts
contracts/: Cargo.toml  makefile
contracts/articles/: Cargo.toml  build.rs
contracts/articles/io/: Cargo.toml
contracts/articles/io/src/: lib.rs
contracts/articles/src/: lib.rs
contracts/blogs/: Cargo.toml  build.rs
contracts/blogs/io/: Cargo.toml
contracts/blogs/io/src/: lib.rs
contracts/blogs/src/: lib.rs
contracts/lib/: Cargo.toml
contracts/lib/src/: lib.rs
contracts/org/: Cargo.toml  build.rs
contracts/org/io/: Cargo.toml
contracts/org/io/src/: lib.rs
contracts/org/src/: lib.rs
contracts/pages/: Cargo.toml  build.rs
contracts/pages/io/: Cargo.toml
contracts/pages/io/src/: lib.rs
contracts/pages/src/: lib.rs
contracts/users/: Cargo.toml  build.rs
contracts/users/io/: Cargo.toml
contracts/users/io/src/: lib.rs
contracts/users/src/: lib.rs
headless/: .env.example  .eslintrc.cjs  .gitignore  nodemon.json  package-lock.json  package.json  tsconfig-schema.json  tsconfig.json  vercel.json
headless/api/: index.ts
headless/patches/: @apollo+server+4.10.4.patch  resolvable+1.0.1.patch
headless/src/: server.ts
headless/src/config/: env.ts  gear.ts
headless/src/controllers/: articles.ts
headless/src/resolvers/: articles.ts  blogs.ts  index.ts  orgs.ts  users.ts
headless/src/typeDefs/: articles.ts  blogs.ts  index.ts  orgs.ts  users.ts
headless/src/types/: index.ts
test/: .env  package-lock.json  package.json
test/src/app/: page.tsx
test/src/graphql/: query.ts
test/src/lib/: api.ts  config.ts
(+43 files in other folders)
