[workspace]
resolver = "2"
members = [ "articles", "pages", "users", "lib"]


[workspace.package]
name = "symbion"
version = "0.1.0"
edition = "2021"
authors = ["Rocky Essel"]
license = "MIT"
publish = false

[workspace.dependencies]
# Internal Crates
users-io= {path ='users/io'}
pages-io= {path ='pages/io'}
lib= {path = "lib"}
users={path = "users"}
articles={path = "articles"}
articles-io={path = "articles/io"}

# External Crates
gstd = "1.4.1"
gmeta = "1.4.1"
gtest  = "1.4.1"
gear-wasm-builder = "1.4.1"
parity-scale-codec = { version = "3.6.12", default-features = false, features = ["derive"] }
scale-info-derive= { version = "2.4.0", default-features = false }