[package]
name = "articles"
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true
gmeta.workspace = true
articles-io.workspace=true



[dev-dependencies]
articles-io.workspace=true




[build-dependencies]
gear-wasm-builder.workspace =true
articles-io.workspace=true
