[package]
name = "blogs"
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true
gmeta.workspace = true
blogs-io.workspace=true



[dev-dependencies]
blogs-io.workspace=true




[build-dependencies]
gear-wasm-builder.workspace =true
blogs-io.workspace=true
