[package]
name = "org"
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true
gmeta.workspace = true
org-io.workspace = true
# scale-info.workspace = true



[dev-dependencies]
org-io.workspace = true
scale-info-derive.workspace = true



[build-dependencies]
gear-wasm-builder.workspace = true
org-io.workspace = true