[package]
name = "deconnect-pages"
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true
gmeta.workspace = true
deconnect-pages-io.workspace = true
# scale-info.workspace = true



[dev-dependencies]
deconnect-pages-io.workspace = true
scale-info-derive.workspace = true



[build-dependencies]
gear-wasm-builder.workspace = true
deconnect-pages-io.workspace = true