[package]
name = "pages"
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true
gmeta.workspace = true
pages-io.workspace = true
# scale-info.workspace = true



[dev-dependencies]
pages-io.workspace = true
scale-info-derive.workspace = true



[build-dependencies]
gear-wasm-builder.workspace = true
pages-io.workspace = true