[package]
name = "users"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
gmeta.workspace = true
users-io.workspace = true

[dev-dependencies]
users-io.workspace = true
scale-info-derive.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
users-io.workspace = true