[package]
name = "users-io"
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true
gmeta.workspace = true
parity-scale-codec.workspace = true
scale-info-derive.workspace = true
